--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,4 +1,5 @@
-Django==5.2.8
+Django==4.2.16
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.4.0
 django-cors-headers==4.6.0
+PyMySQL==1.1.0
