--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,3 +3,5 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.4.0
 django-cors-headers==4.6.0
 PyMySQL==1.1.0
+requests==2.31.0
+python-dotenv==1.0.1
